--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Identify changed Terraform files
         id: changed-files
         run: |
-         CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep '\.tf$' || true)
+         CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep '\.tf$' || true)
 
           if [[ -z "$CHANGED_FILES" ]]; then
             echo "No Terraform files changed."
