--- a/.github/workflows/changecheckov.yml
+++ b/.github/workflows/changecheckov.yml
@@ -1,4 +1,4 @@
-name: full checkov
+name: corrected full checkov
 
 on:
   pull_request:
@@ -42,27 +42,19 @@ jobs:
       - name: Install Checkov
         run: pip install checkov
 
-      # Step 5: Run Checkov scan on changed .tf files
+      # Step 5: Run Checkov scan on changed .tf files and save results
       - name: Run Checkov on changed files
         if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
         run: |
+          echo "[]" > checkov_results.json  # Initialize empty JSON array
           for file in $CHANGED_FILES; do
             echo "Running Checkov on $file"
-            checkov -f $file --output json > checkov_results.json
-            CRITICAL_ISSUES=$(jq '[.results.failed_checks[] | select(.severity == "CRITICAL") ] | length' checkov_results.json)
-            
-            if [ "$CRITICAL_ISSUES" -gt 0 ]; then
-              echo "CRITICAL issues found: $CRITICAL_ISSUES"
-              echo "::error::Checkov found critical security issues!"
-              exit 1
-            else
-              echo "No critical security issues found."
-            fi
+            checkov -f $file --output json >> checkov_results.json
           done
 
-      # Step 6: Upload Checkov scan results as a PR comment
+      # Step 6: Post Checkov scan results as PR comment
       - name: Post Checkov scan results as PR comment
-        if: always()
+        if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: checkov_results.json
