--- a/.github/workflows/changecheckov.yml
+++ b/.github/workflows/changecheckov.yml
@@ -1,4 +1,4 @@
-name: corrected full checkov
+name: lnt,fmt & checkov
 
 on:
   pull_request:
@@ -23,7 +23,6 @@ jobs:
           git fetch origin main
           CHANGED_FILES=$(git diff --name-only origin/main | grep '\.tf$' || true)
           echo "Changed files: $CHANGED_FILES"
-          
           if [ -z "$CHANGED_FILES" ]; then
             echo "No Terraform files changed."
             exit 0
@@ -38,11 +37,41 @@ jobs:
         with:
           python-version: '3.x'
 
-      # Step 4: Install Checkov
+      # Step 4: Install Checkov and Terraform tools
       - name: Install Checkov
         run: pip install checkov
 
-      # Step 5: Run Checkov scan on changed .tf files and save results
+      - name: Install Terraform
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          curl -LO https://releases.hashicorp.com/terraform/1.5.3/terraform_1.5.3_linux_amd64.zip
+          unzip terraform_1.5.3_linux_amd64.zip
+          sudo mv terraform /usr/local/bin/
+
+      - name: Install TFLint
+        run: |
+          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      # Step 5: Run Terraform fmt on changed files (ignoring non-critical warnings)
+      - name: Run Terraform fmt
+        if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
+        run: |
+          for file in $CHANGED_FILES; do
+            echo "Running terraform fmt on $file"
+            terraform fmt -check -diff $file || echo "Warning: Formatting issues found but ignoring."
+          done
+
+      # Step 6: Run TFLint on changed files (ignoring non-critical warnings)
+      - name: Run TFLint on changed files
+        if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
+        run: |
+          for file in $CHANGED_FILES; do
+            echo "Running TFLint on $file"
+            tflint $file || echo "Warning: Best practice violations found but ignoring."
+          done
+
+      # Step 7: Run Checkov scan on changed .tf files and save results
       - name: Run Checkov on changed files
         if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
         run: |
@@ -52,7 +81,7 @@ jobs:
             checkov -f $file --output json >> checkov_results.json
           done
 
-      # Step 6: Post Checkov scan results as PR comment using GitHub CLI
+      # Step 8: Post Checkov scan results as PR comment using GitHub CLI
       - name: Post Checkov scan results as PR comment
         if: success() && steps.check-changed-files.outputs.CHANGED_FILES != ''
         env:
