--- a/.github/workflows/newtry.yml
+++ b/.github/workflows/newtry.yml
@@ -1,118 +1,92 @@
-name: Terraform Checks and PR Comment
+name: full+commands enhanced
 
 on:
   pull_request:
     paths:
       - '**/*.tf'
+      - '.github/workflows/*.yml'
 
 jobs:
-  check-changed-files:
+  terraform-lint:
     runs-on: ubuntu-latest
+
     steps:
-      # Step 1: Checkout the code
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 2
 
-      # Step 2: Find changed Terraform files
+      # Step 2: Find changed .tf files
       - name: Find changed .tf files
         id: changed-files
         run: |
           git fetch origin main
           CHANGED_FILES=$(git diff --name-only origin/main | grep '\.tf$' || true)
-          echo "Changed files: $CHANGED_FILES"
-          echo "files=$CHANGED_FILES" >> $GITHUB_ENV
+          if [ -z "$CHANGED_FILES" ]; then
+            echo "No Terraform files changed."
+            exit 0
+          else
+            echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
+          fi
 
-      # Step 3: Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      # Step 4: Install Checkov
-      - name: Install Checkov
-        run: pip install checkov
-
-      # Step 5: Install Terraform
-      - name: Install Terraform
+      # Step 3: Set up Terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
 
-      # Step 6: Install TFLint
-      - name: Install TFLint
+      # Step 4: Terraform Fmt Check
+      - name: Terraform Fmt
+        if: env.CHANGED_FILES != ''
         run: |
-          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+          TERRAFORM_FMT_STATUS=""
+          for file in ${CHANGED_FILES}; do
+            if terraform fmt -check -recursive $(dirname "$file"); then
+              TERRAFORM_FMT_STATUS+="✅ $file is formatted correctly\n"
+            else
+              TERRAFORM_FMT_STATUS+="❌ $file needs formatting\n"
+            fi
+          done
+          echo "TERRAFORM_FMT_STATUS=${TERRAFORM_FMT_STATUS}" >> $GITHUB_ENV
 
-      # Step 7: Run Terraform fmt
-      - name: Run Terraform fmt
-        id: terraform-fmt
+      # Step 5: TFLint Check
+      - name: Terraform TFLint
+        if: env.CHANGED_FILES != ''
         run: |
-          if [ -n "${{ env.files }}" ]; then
-            terraform fmt -check -diff ${{ env.files }}
-          fi
-        continue-on-error: true
+          TFLINT_STATUS=""
+          for file in ${CHANGED_FILES}; do
+            if tflint $(dirname "$file"); then
+              TFLINT_STATUS+="✅ $file linted successfully\n"
+            else
+              TFLINT_STATUS+="❌ $file has linting issues\n"
+            fi
+          done
+          echo "TFLINT_STATUS=${TFLINT_STATUS}" >> $GITHUB_ENV
 
-      # Step 8: Set Terraform fmt status
-      - name: Set Terraform fmt status
-        id: terraform-fmt-status
+      # Step 6: Checkov Scan
+      - name: Checkov scan
+        if: env.CHANGED_FILES != ''
         run: |
-          if [ $? -eq 0 ]; then
-            echo "TERRAFORM_FMT_STATUS=✅ Terraform fmt check successful" >> $GITHUB_ENV
+          CHECKOV_STATUS=""
+          for file in ${CHANGED_FILES}; do
+            if checkov -f "$file" --compact --quiet; then
+              CHECKOV_STATUS+="✅ $file passed security checks\n"
+            else
+              CHECKOV_STATUS+="❌ $file has security issues\n"
+            fi
+          done
+          echo "CHECKOV_STATUS=${CHECKOV_STATUS}" >> $GITHUB_ENV
+
+      # Step 7: Final Status
+      - name: Final Status Check
+        run: |
+          if [[ "$TERRAFORM_FMT_STATUS" == *"❌"* || "$TFLINT_STATUS" == *"❌"* || "$CHECKOV_STATUS" == *"❌"* ]]; then
+            FINAL_STATUS="❌ Checks failed"
           else
-            echo "TERRAFORM_FMT_STATUS=❌ Terraform fmt check failed" >> $GITHUB_ENV
+            FINAL_STATUS="✅ All checks passed"
           fi
+          echo "FINAL_STATUS=${FINAL_STATUS}" >> $GITHUB_ENV
 
-      # Step 9: Run TFLint
-      - name: Run TFLint
-        id: tflint
-        run: |
-          if [ -n "${{ env.files }}" ]; then
-            tflint ${{ env.files }}
-          fi
-        continue-on-error: true
-
-      # Step 10: Set TFLint status
-      - name: Set TFLint status
-        id: tflint-status
-        run: |
-          if [ $? -eq 0 ]; then
-            echo "TFLINT_STATUS=✅ TFLint check successful" >> $GITHUB_ENV
-          else
-            echo "TFLINT_STATUS=❌ TFLint check failed" >> $GITHUB_ENV
-          fi
-
-      # Step 11: Run Checkov
-      - name: Run Checkov
-        id: checkov
-        run: |
-          if [ -n "${{ env.files }}" ]; then
-            checkov -f ${{ env.files }}
-          fi
-        continue-on-error: true
-
-      # Step 12: Set Checkov status
-      - name: Set Checkov status
-        id: checkov-status
-        run: |
-          if [ $? -eq 0 ]; then
-            echo "CHECKOV_STATUS=✅ Checkov scan successful" >> $GITHUB_ENV
-          else
-            echo "CHECKOV_STATUS=❌ Checkov scan failed" >> $GITHUB_ENV
-          fi
-
-      # Step 13: Determine final status
-      - name: Determine final status
-        id: final-status
-        run: |
-          if [[ "${{ env.TERRAFORM_FMT_STATUS }}" == "✅ Terraform fmt check successful" ]] &&
-             [[ "${{ env.TFLINT_STATUS }}" == "✅ TFLint check successful" ]] &&
-             [[ "${{ env.CHECKOV_STATUS }}" == "✅ Checkov scan successful" ]]; then
-            echo "FINAL_STATUS=✅ All checks passed successfully! 🎉" >> $GITHUB_ENV
-          else
-            echo "FINAL_STATUS=❌ One or more checks failed. Please review the results." >> $GITHUB_ENV
-          fi
-
-      # Step 14: Post Check Results as a PR comment
+      # Step 8: Post Check Results as a PR comment
       - name: Post Check Results as PR comment
         uses: mshick/add-pr-comment@v2
         with:
@@ -125,4 +99,3 @@ jobs:
 
             **Final Status:** ${{ env.FINAL_STATUS }}
         if: always()
-
