--- a/.github/workflows/newtry.yml
+++ b/.github/workflows/newtry.yml
@@ -15,17 +15,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Find changed .tf files
+      # Step 2: Find changed Terraform files
       - name: Find changed .tf files
         id: changed-files
         run: |
+          echo "Checking for changed .tf files..."
           git fetch origin main
           CHANGED_FILES=$(git diff --name-only origin/main | grep '\.tf$' || true)
+          echo "Changed files: $CHANGED_FILES"
+          
           if [ -z "$CHANGED_FILES" ]; then
             echo "No Terraform files changed."
             exit 0
           else
-            echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
+            echo "Terraform files changed:"
+            echo "$CHANGED_FILES"
+            # Set output to make changed files available in subsequent steps
+            echo "::set-output name=files::$CHANGED_FILES"
           fi
 
       # Step 3: Set up Terraform
