--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -1,97 +1,110 @@
-name: full+commands enhanced
+name: full working code
 
 on:
   pull_request:
     paths:
       - '**/*.tf'
-      - '.github/workflows/*.yml'
 
 jobs:
-  terraform-lint:
+  check-changed-files:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 2  # Fetch enough history for comparison
 
       # Step 2: Find changed Terraform files
       - name: Find changed .tf files
         id: changed-files
         run: |
-          echo "Checking for changed .tf files..." > terraform_checks.txt
+          echo "Checking for changed .tf files..."
           git fetch origin main
           CHANGED_FILES=$(git diff --name-only origin/main | grep '\.tf$' || true)
-          echo "Changed files: $CHANGED_FILES" >> terraform_checks.txt
+          echo "Changed files: $CHANGED_FILES"
 
           if [ -z "$CHANGED_FILES" ]; then
-            echo "No Terraform files changed." >> terraform_checks.txt
+            echo "No Terraform files changed."
             exit 0
           else
-            echo "Terraform files changed:" >> terraform_checks.txt
-            echo "$CHANGED_FILES" >> terraform_checks.txt
+            echo "Terraform files changed:"
+            echo "$CHANGED_FILES"
+            # Set output to make changed files available in subsequent steps
             echo "::set-output name=files::$CHANGED_FILES"
           fi
 
-      # Step 3: Set up Terraform
-      - name: Set up Terraform
+      # Step 3: Set up Python (required for Checkov)
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      # Step 4: Install Checkov
+      - name: Install Checkov
+        run: pip install checkov
+
+      # Step 5: Install Terraform
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
 
-      # Step 4: Terraform Fmt Check
-      - name: Terraform Fmt
-        if: env.CHANGED_FILES != ''
+      # Step 6: Install TFLint
+      - name: Install TFLint
         run: |
-          echo "### Terraform FMT Check Results" >> terraform_checks.txt
-          for file in ${CHANGED_FILES}; do
-            if terraform fmt -check -recursive $(dirname "$file"); then
-              echo "✅ $file is formatted correctly" >> terraform_checks.txt
-            else
-              echo "❌ $file needs formatting" >> terraform_checks.txt
+          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      # Step 7: Run Terraform fmt on changed files
+      - name: Run Terraform fmt
+        if: success() && steps.changed-files.outputs.files != ''
+        run: |
+          for file in ${{ steps.changed-files.outputs.files }}; do
+            echo "Running Terraform fmt on $file"
+            terraform fmt -check -diff $file || echo "WARNING: Terraform fmt failed for $file (ignorable warning)"
+          done
+
+      # Step 8: Run TFLint on changed files
+      - name: Run TFLint on changed files
+        if: success() && steps.changed-files.outputs.files != ''
+        run: |
+          for file in ${{ steps.changed-files.outputs.files }}; do
+            echo "Running TFLint on $file"
+            tflint $file || echo "WARNING: TFLint issues found in $file (ignorable warning)"
+          done
+
+      # Step 9: Run Checkov scan on changed .tf files and save results
+      - name: Run Checkov on changed files
+        if: success() && steps.changed-files.outputs.files != ''
+        run: |
+          echo "[]" > checkov_results.json  # Initialize empty JSON array
+          for file in ${{ steps.changed-files.outputs.files }}; do
+            echo "Running Checkov on $file"
+            CHECKOV_OUTPUT=$(checkov -f $file --output cli || true)
+            if [ -n "$CHECKOV_OUTPUT" ]; then
+              echo "$CHECKOV_OUTPUT"
+              # Append the output to the JSON file
+              echo "$CHECKOV_OUTPUT" >> checkov_results.json
             fi
           done
 
-      # Step 5: TFLint Check
-      - name: Terraform TFLint
-        if: env.CHANGED_FILES != ''
+      # Step 10: Post Checkov scan results as PR comment using GitHub CLI
+      - name: Post Checkov scan results as PR comment
+        if: success() && steps.changed-files.outputs.files != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "### TFLint Check Results" >> terraform_checks.txt
-          for file in ${CHANGED_FILES}; do
-            if tflint $(dirname "$file"); then
-              echo "✅ $file linted successfully" >> terraform_checks.txt
-            else
-              echo "❌ $file has linting issues" >> terraform_checks.txt
-            fi
-          done
+          PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
+          COMMENT_BODY=$(cat checkov_results.json)
+          echo "$COMMENT_BODY" | gh pr comment $PR_NUMBER --body-file -
 
-      # Step 6: Checkov Scan
-      - name: Checkov scan
-        if: env.CHANGED_FILES != ''
+      # Step 11: Post success message in PR comment
+      - name: Post success message
+        if: success()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "### Checkov Security Scan Results" >> terraform_checks.txt
-          for file in ${CHANGED_FILES}; do
-            if checkov -f "$file" --compact --quiet; then
-              echo "✅ $file passed security checks" >> terraform_checks.txt
-            else
-              echo "❌ $file has security issues" >> terraform_checks.txt
-            fi
-          done
-
-      # Step 7: Display the Output Using cat
-      - name: Display Check Results
-        run: cat terraform_checks.txt
-
-      # Step 8: Post Check Results as a PR comment
-      - name: Post Check Results as PR comment
-        uses: mshick/add-pr-comment@v2
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          message: |
-            ### Terraform Check Results
-            ```
-            $(cat terraform_checks.txt)
-            ```
-        if: always()
-
+          PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
+          echo "All tests successful, good to go! 🎉" | gh pr comment $PR_NUMBER --body-file -
  
