--- a/.github/workflows/withtxt.yml
+++ b/.github/workflows/withtxt.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - '**/*.tf'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   check-changed-files:
     runs-on: ubuntu-latest
@@ -56,53 +60,59 @@ jobs:
         run: |
           curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
 
-      # Step 7: Run Terraform fmt on changed files
+      # Step 7: Run Terraform fmt on changed files and save results
       - name: Run Terraform fmt
         if: success() && steps.changed-files.outputs.files != ''
         run: |
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running Terraform fmt on $file"
-            terraform fmt -check -diff $file || echo "WARNING: Terraform fmt failed for $file (ignorable warning)"
+            terraform fmt -check -diff $file > fmt_results.txt || echo "WARNING: Terraform fmt failed for $file (ignorable warning)"
           done
-      # Step 8: Run TFLint on changed files
+
+      # Step 8: Run TFLint on changed files and save results
       - name: Run TFLint on changed files
         if: success() && steps.changed-files.outputs.files != ''
         run: |
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running TFLint on $file"
-            tflint $file || echo "WARNING: TFLint issues found in $file (ignorable warning)"
+            tflint $file > tflint_results.txt || echo "WARNING: TFLint issues found in $file (ignorable warning)"
           done
 
       # Step 9: Run Checkov scan on changed .tf files and save results
       - name: Run Checkov on changed files
         if: success() && steps.changed-files.outputs.files != ''
         run: |
-          echo "[]" > checkov_results.json  # Initialize empty JSON array
+          echo "" > checkov_results.txt  # Initialize empty results file
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running Checkov on $file"
-            CHECKOV_OUTPUT=$(checkov -f $file --output cli || true)
-            if [ -n "$CHECKOV_OUTPUT" ]; then
-              echo "$CHECKOV_OUTPUT"
-              # Append the output to the JSON file
-              echo "$CHECKOV_OUTPUT" >> checkov_results.json
-            fi
+            checkov -f $file --output cli >> checkov_results.txt || echo "WARNING: Checkov scan failed for $file (ignorable warning)"
           done
 
-      # Step 10: Post Checkov scan results as PR comment using GitHub CLI
-      - name: Post Checkov scan results as PR comment
+      # Step 10: Combine all results into one file
+      - name: Combine results
+        if: success()
+        run: |
+          echo "### Terraform Fmt Results" > combined_results.txt
+          cat fmt_results.txt >> combined_results.txt
+          echo "\n### TFLint Results" >> combined_results.txt
+          cat tflint_results.txt >> combined_results.txt
+          echo "\n### Checkov Results" >> combined_results.txt
+          cat checkov_results.txt >> combined_results.txt
+
+      # Step 11: Post results as PR comment
+      - name: Post Check Results as PR comment
         if: success() && steps.changed-files.outputs.files != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
-          COMMENT_BODY=$(cat checkov_results.json)
-          echo "$COMMENT_BODY" | gh pr comment $PR_NUMBER --body-file -
+          gh pr comment $PR_NUMBER --body "$(cat combined_results.txt)"
 
-      # Step 11: Post success message in PR comment
+      # Step 12: Post success message in PR comment
       - name: Post success message
         if: success()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
-          echo "All tests successful, good to go! 🎉" | gh pr comment $PR_NUMBER --body-file -
+          gh pr comment $PR_NUMBER --body "All tests successful, good to go! 🎉"
