--- a/.github/workflows/updated.yml
+++ b/.github/workflows/updated.yml
@@ -1,16 +1,18 @@
-name: notoken yml
+name: updated yml
+
 on:
   pull_request:
     paths:
       - '**/*.tf'
 
-permissions: 
+permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  terraform:
+  check-changed-files:
     runs-on: ubuntu-latest
+
     steps:
       # Step 1: Checkout the repository
       - name: Checkout code
@@ -37,18 +39,27 @@ jobs:
             echo "::set-output name=files::$CHANGED_FILES"
           fi
 
-      # Step 3: Set up Terraform
-      - name: Set up Terraform
+      # Step 3: Set up Python (required for Checkov)
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      # Step 4: Install Checkov
+      - name: Install Checkov
+        run: pip install checkov
+
+      # Step 5: Install Terraform
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0
+          terraform_wrapper: false
 
-      # Step 4: Install TFLint
+      # Step 6: Install TFLint
       - name: Install TFLint
         run: |
           curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-
-      # Step 5: Run Terraform Fmt
+     # Step 5: Run Terraform Fmt
       - name: Run Terraform Fmt
         continue-on-error: true
         id: fmt
