--- a/.github/workflows/newedit.yml
+++ b/.github/workflows/newedit.yml
@@ -60,58 +60,62 @@ jobs:
         run: |
           curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
 
-      # Step 7: Run Terraform fmt on changed files and save results
+      # Step 7: Run Terraform fmt
       - name: Run Terraform fmt
         if: success() && steps.changed-files.outputs.files != ''
         run: |
-          echo "" > fmt_results.txt
+          fmt_results=""
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running Terraform fmt on $file"
-            if terraform fmt -check -diff $file >> fmt_results.txt 2>&1; then
-              echo "Terraform fmt ran successfully for $file" >> fmt_results.txt
+            output=$(terraform fmt -check -diff "$file" 2>&1)
+
+            if [[ $? -eq 0 ]]; then
+              fmt_results+="✅ Found no format issue on $file\n"
             else
-              echo "Found formatting issues in $file" >> fmt_results.txt
+              fmt_results+="❌ Formatting issues found in $file:\n$output\n"
             fi
           done
-          cat fmt_results.txt
 
-      # Step 8: Run TFLint on changed files and save results
+          if [[ -z "$fmt_results" ]]; then
+            fmt_results="✅ No format issues found in any changed file."
+          fi
+
+          echo -e "$fmt_results" > fmt_results.txt
+
+      # Step 8: Run TFLint
       - name: Run TFLint on changed files
         if: success() && steps.changed-files.outputs.files != ''
         run: |
-          echo "" > tflint_results.txt
+          tflint_results=""
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running TFLint on $file"
-            if tflint $file >> tflint_results.txt 2>&1; then
-              echo "TFLint check successful for $file" >> tflint_results.txt
+            output=$(tflint "$file" 2>&1)
+
+            if [[ $? -eq 0 ]]; then
+              tflint_results+="✅ Found no lint issue on $file\n"
             else
-              echo "ERROR: TFLint issues found in $file" >> tflint_results.txt
-              echo "Check the TFLint task logs: [Workflow Log](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> tflint_results.txt
+              tflint_results+="❌ Lint issues found in $file:\n$output\n"
             fi
           done
-          cat tflint_results.txt
-        continue-on-error: true
+
+          if [[ -z "$tflint_results" ]]; then
+            tflint_results="✅ No lint issues found in any changed file."
+          fi
+
+          echo -e "$tflint_results" > tflint_results.txt
 
       # Step 9: Run Checkov scan on changed .tf files and save results
       - name: Run Checkov on changed files
         if: success() && steps.changed-files.outputs.files != ''
         run: |
-          echo "" > checkov_results.txt
+          echo "" > checkov_results.txt  # Initialize empty results file
           for file in ${{ steps.changed-files.outputs.files }}; do
             echo "Running Checkov on $file"
-            checkov -f $file --quiet >> checkov_results.txt
-            if [ $? -eq 0 ]; then
-              echo "Checkov scan ran successfully for $file" >> checkov_results.txt
-            else
-              echo "Checkov scan found issues in $file" >> checkov_results.txt
-              echo "Check the Checkov task logs: [Workflow Log](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> checkov_results.txt
-            fi
+            checkov -f $file --output cli >> checkov_results.txt || echo "WARNING: Checkov scan failed for $file (ignorable warning)"
           done
-          cat checkov_results.txt
 
-      # Step 10: Combine all results into one file
+      # Step 10: Combine results
       - name: Combine results
-        if: success()
         run: |
           echo "### Terraform Fmt Results" > combined_results.txt
           cat fmt_results.txt >> combined_results.txt
@@ -120,20 +124,10 @@ jobs:
           echo "\n### Checkov Results" >> combined_results.txt
           cat checkov_results.txt >> combined_results.txt
 
-      # Step 11: Post results as PR comment
-      - name: Post Check Results as PR comment
-        if: success() && steps.changed-files.outputs.files != ''
+      # Step 11: Post - name: Post Check Results as PR comment
+        if: steps.changed-files.outputs.files != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
           gh pr comment $PR_NUMBER --body "$(cat combined_results.txt)"
-
-      # Step 12: Post success message in PR comment
-      - name: Post success message
-        if: success() && steps.changed-files.outputs.files != ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          PR_NUMBER=$(jq --raw-output '.[0].number' <<< "$(gh pr list --json number --state open --limit 1)")
-          gh pr comment $PR_NUMBER --body "All checks are successful, good to go! 🎉"
